@@ -21,7 +21,7 @@
 ;;
 ;; Author:     Eduardo Ochs <eduardoochs@gmail.com>
 ;; Maintainer: Eduardo Ochs <eduardoochs@gmail.com>
-;; Version:    20220120
+;; Version:    20220126
 ;; Keywords:   e-scripts
 ;;
 ;; Latest version: <http://angg.twu.net/eev-current/eev-blinks.el>
@@ -69,6 +69,7 @@
 ;; «.find-einsert»		(to "find-einsert")
 ;; «.find-eunicode»		(to "find-eunicode")
 ;; «.find-eejumps»		(to "find-eejumps")
+;; «.find-eeshortdefs»		(to "find-eeshortdefs")
 
 
 
@@ -1391,6 +1392,50 @@ Hint: install the Debian package \"unicode-data\".")
 		   (ee-find-eejumps-body))
 	   pos-spec-list)))
 
+
+
+
+
+;;;   __ _           _                      _                _      _       __     
+;;;  / _(_)_ __   __| |       ___  ___  ___| |__   ___  _ __| |_ __| | ___ / _|___ 
+;;; | |_| | '_ \ / _` |_____ / _ \/ _ \/ __| '_ \ / _ \| '__| __/ _` |/ _ \ |_/ __|
+;;; |  _| | | | | (_| |_____|  __/  __/\__ \ | | | (_) | |  | || (_| |  __/  _\__ \
+;;; |_| |_|_| |_|\__,_|      \___|\___||___/_| |_|\___/|_|   \__\__,_|\___|_| |___/
+;;;                                                                                
+;; «find-eeshortdefs»  (to ".find-eeshortdefs")
+;; Test: (find-eeshortdefs)
+;; See: (find-eev-quick-intro "7.4. Commands with very short names")
+
+(defvar ee-shortdefp-maxlen-name 3)
+(defvar ee-shortdefp-maxlen-def 80)
+
+(defun ee-shortdefp (sym)
+  (and (fboundp  sym)
+       (commandp sym)
+       (listp      (symbol-function  sym))
+       (eq (car    (symbol-function  sym)) 'lambda)
+       (<= (length (symbol-name      sym)) ee-shortdefp-maxlen-name)
+       (<= (length (ee-defun-str-for sym)) ee-shortdefp-maxlen-def)))
+
+(defun ee-shortdef-symbols ()
+  (apropos-internal "^.*$" 'ee-shortdefp))
+
+(defun ee-find-eeshortdefs-body ()
+  (mapconcat 'ee-defun-str-for (ee-shortdef-symbols) "\n"))
+
+(defun ee-find-eeshortdefs-header ()
+  ";; Generated by: (find-eeshortdefs)
+;; See: (find-eev-quick-intro \"7.4. Commands with very short names\")
+;; Current short defs:\n\n")
+
+(defun find-eeshortdefs (&rest pos-spec-list)
+  "This is similar to `find-eejumps', but lists commands with very short names."
+  (interactive)
+  (let ((ee-buffer-name "*(find-eeshortdefs)*"))
+    (apply 'find-estring-elisp
+	   (concat (ee-find-eeshortdefs-header)
+		   (ee-find-eeshortdefs-body))
+	   pos-spec-list)))
 
 
 
